istio/pluralsight/kubernetes-istio-managing-apps/module-05/demos/m5/demo1/bookinfo/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: bookinfo
  name: bookinfo
spec:
  hosts:
  - bookinfo.local
  gateways:
  - istio-ingress/gateway
  exportTo:
  - istio-ingress
  http:
  - route:
    - destination:
        host: productpage
        port:
          number: 9080
